--- a/src/styles/avatar.css
+++ b/src/styles/avatar.css
@@ -1,10 +1,18 @@
 .avatar {
+  overflow: hidden;
+  border: solid .1em rgb(100, 17, 100);
+  border-radius: 1em;
   width: 500px;
   height: 320px;
-  margin: 0 auto;
+  margin: 1em auto;
 }
-
 .avatar img {
   width: 100%;
   height: 100%;
+}
+
+.avatar img:hover {  
+  transform: scale(1.1);
+  transition: all 0.5s ease-in-out;
+  opacity: 0.3;
 }
