--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,45 +5,9 @@ body {
 .App {
   text-align: center;
   background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+  height: 100vh;
 }
 
-
-/*
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-*/
 /* Global Styles */
 /* body {
   font-family: Arial, sans-serif;
@@ -59,7 +23,7 @@ body {
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  margin: 2em auto;
+  /* margin: 2em; */
   padding: 20px;
   width: 370px;
 }
@@ -104,4 +68,10 @@ button.decrement:hover {
 
 .green {
   color: green;
+}
+
+.cards {
+
+  display: flex;
+  justify-content: space-around;
 }
