--- a/src/styles/badge.css
+++ b/src/styles/badge.css
@@ -3,16 +3,19 @@
   border-radius: 0.6em;
   color: wheat;
   font-weight: 400;
-  padding: 0.5em 1em;  
+  padding: .9em 1em;  
   position: absolute;
-  margin-left: 80px;
+  margin-left: 40px;
+  margin-top: -105px;
+  transform: rotate(8deg);
 }
 
 span:hover {  
-  color: black;
-  transform: rotate(3deg);
-  /* transform: scale(1.1); */
+  color: rgb(7, 60, 72);
+  transform: scale(1.1);
   transition: all 0.5s ease-in-out;
+  font-weight: bold;
+  cursor: not-allowed;
   /* opacity: 0.3; */
 }
 
