--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,6 +2,7 @@
   font-weight: 900;
   font-size: 3em;
   color: brown;
-  margin: 0;
+  margin: 0 0 50px ;
   padding: 30px 0;  
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
